# cpp-speech-vs-non-speech

./: .clang-format  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  makefile  silero-vad.pt
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  lib.hpp  main.cpp
test/: CMakeLists.txt
test/source/: speech-vs-non-speech_test.cpp
